Prüfen sie die Website.

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Search IMG</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <form class="search-form">
+      <input type="text" name="text" placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+    <!-- <div class="loader" style="display: none">
+      Loading images, please wait...
+    </div> -->
+    <span class="loader" style="display: none"></span>
+    <ul class="gallery"></ul>
+    <button type="button" class="loadBtn">Load more</button>
+    <span class="loader moreLoader" style="display: none"></span>
 
     <script type="module" src="./main.js"></script>
   </body>
